[package]
name = "error_level"
version = "0.1.0"
authors = ["dskleingeld <11743287+dskleingeld@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
error_level_derive = { version = "0.1", path = "../error_level_derive" }

[dev-dependencies]
simplelog = "0.8.0"
