[package]
name = "error_level_derive"
version = "0.1.0"
authors = ["dskleingeld <11743287+dskleingeld@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
log = "0.4"
syn = { version = "1.0", features = ["derive","extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
thiserror = "1"
simplelog = "0.8.0"
error_level = { version = "0.1", path = "../error_level" }
